k8/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: netflix-stable
spec:
  replicas: 2
  selector:
    matchLabels:
      app: netflix
      version: stable
  template:
    metadata:
      labels:
        app: netflix
        version: stable
    spec:
      containers:
      - name: netflix
        image: metasploiter05/netflix:latest
        ports:
        - containerPort: 3000
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "200m"
            memory: "512Mi"
