k8/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: netflix-service
  labels:
    app: netflix
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: netflix  # This will select both stable and canary pods
